# paintcompiler

./: LICENSE  README.md  pyproject.toml
Lib/paintcompiler/: __init__.py
Lib/paintdecompiler/: __init__.py
example/: COLRv1-Test.glyphs  build.sh  paints.py
