[project]
name = "paintcompiler"
description = "Paint compiler for COLRv1 fonts"
version = "0.1.0"
authors = [
    { name = "Simon Cozens", email = "simon@simon-cozens.org" }
]
dependencies = [
    "fontTools>=4.37.3",
]

[tool.setuptools.packages.find]
where = ["Lib"]

[project.scripts]
paintcompiler = "paintcompiler:main"
